Updates to paper information.

--- a/publications.html
+++ b/publications.html
@@ -97,59 +97,57 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     Empirical Study of Developers' Challenges in Implementing Workflows as Code: A Case Study on Apache
                     Airflow</a>, Journal of Software and Systems (JSS), Elsevier, to appear.&nbsp;<a
                     href="publications/2024/jss_airflow.bib"><i>BibTeX</i></a></li>
-            <li>ZHENG, S., ADAMS, B. and HASSAN, A.E. (2024). <a href="https://arxiv.org/abs/2405.00796">Does Using
-                    Bazel Help Speed
-                    Up Continuous Integration Builds?</a>, Empirical Software
-                Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_shenyu.bib"><i>BibTeX</i></a>
-            </li>
-            
-            <li>OUATITI, Y.E., SAYAGH, M., KERZAZI, N., ADAMS, B. and HASSAN, A.E. (2024). <a
-                    href="https://sail.cs.queensu.ca/data/pdfs/2024_The_Impact_of_Concept_Drift_and_Data_leakage_on_Log_Level_Prediction_Models.pdf">The
-                    impact of Concept drift and Data leakage on Log Level Prediction
-                    Models</a>, Empirical Software
-                Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_youssef.bib"><i>BibTeX</i></a>
-            </li>                                              
-            <li>KAMATH, D.M., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2024). <a
-                    href="publications/2024/emse_divya_timeout.pdf">On Combining Commit Grouping and Build Skip
-                    Prediction to Reduce
-                    Redundant Continuous Integration Activity</a>, Empirical Software
-                Engineering, Springer, to appear.&nbsp;<a
-                    href="publications/2024/emse_divya_timeout.bib"><i>BibTeX</i></a></li>            
             <li>
                 OREAMUNO, E.L., KHAN, R.F., BANGASH, A.A., STINSON, C. and ADAMS, B. (2024). <a
                     href="publications/2024/ieeesw-ernesto.pdf">The
                     State of Documentation Practices of Third-party Machine Learning Models and Datasets</a>, IEEE
-                Software, IEEE,
-                to appear.&nbsp;<a href="publications/2024/ieeesw-ernesto.bib"><i>BibTeX</i></a>
+                Software, 41(5), p.52-59, IEEE.&nbsp;<a href="publications/2024/ieeesw-ernesto.bib"><i>BibTeX</i></a>
             </li>
+            <li>ZHENG, S., ADAMS, B. and HASSAN, A.E. (2024). <a href="https://arxiv.org/abs/2405.00796">Does Using
+                    Bazel Help Speed
+                    Up Continuous Integration Builds?</a>, Empirical Software
+                Engineering, 29(5), Springer.&nbsp;<a href="publications/2024/emse_shenyu.bib"><i>BibTeX</i></a>
+            </li>
+            <li>OUATITI, Y.E., SAYAGH, M., KERZAZI, N., ADAMS, B. and HASSAN, A.E. (2024). <a
+                    href="https://sail.cs.queensu.ca/data/pdfs/2024_The_Impact_of_Concept_Drift_and_Data_leakage_on_Log_Level_Prediction_Models.pdf">The
+                    impact of Concept drift and Data leakage on Log Level Prediction
+                    Models</a>, Empirical Software
+                Engineering, 29(5), Springer.&nbsp;<a href="publications/2024/emse_youssef.bib"><i>BibTeX</i></a>
+            </li>
+            <li>KAMATH, D.M., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2024). <a
+                    href="publications/2024/emse_divya_timeout.pdf">On Combining Commit Grouping and Build Skip
+                    Prediction to Reduce
+                    Redundant Continuous Integration Activity</a>, Empirical Software
+                Engineering, 29(6), Springer.&nbsp;<a
+                    href="publications/2024/emse_divya_timeout.bib"><i>BibTeX</i></a></li>            
             <li>PATEL, H., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_harsh.pdf">Post Deployment
                     Recycling
                     of Machine Learning Models - Don't Throw Away Your Old Models!</a>, Empirical Software
-                Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_harsh.bib"><i>BibTeX</i></a></li>
+                Engineering, 29(4), Springer.&nbsp;<a href="publications/2024/emse_harsh.bib"><i>BibTeX</i></a></li>
             <li>EBRAHIMI, A., ADAMS, B., OLIVA, G.A. and HASSAN, A.E. (2024). <a
                     href="https://sail.cs.queensu.ca/data/pdfs/2024_A_Large-Scale_Exploratory_Study_on_the_Proxy_Pattern_in_Ethereum.pdf">A
                     Large-Scale Exploratory Study on the Proxy Pattern in Ethereum</a>, Empirical Software
-                Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_amir_proxy.bib"><i>BibTeX</i></a>
+                Engineering, 29(4), Springer.&nbsp;<a href="publications/2024/emse_amir_proxy.bib"><i>BibTeX</i></a>
             </li>
             <li>ZHAO, Z., CHEN, Y., BANGASH, A.A., ADAMS, B. and HASSAN, A.E. (2024). <a href="https://arxiv.org/abs/2402.15990">An
                     Empirical Study of Challenges in Machine Learning Asset
                     Management</a>, Empirical Software
-                Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_jimmy_challenges.bib"><i>BibTeX</i></a></li>
+                Engineering, 29(4), Springer.&nbsp;<a href="publications/2024/emse_jimmy_challenges.bib"><i>BibTeX</i></a></li>
             <li>MALIK, A., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_akshat_within.pdf">Towards
                     Graph-Anonymization of Software Analytics Data: Empirical Study on JIT Defect Prediction</a>,
-                Empirical Software Engineering, Springer, to appear.&nbsp;<a
+                Empirical Software Engineering, 29(4), Springer.&nbsp;<a
                     href="publications/2024/emse_akshat_within.bib"><i>BibTeX</i></a></li>
-            <li>LIN, J., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_justina_cna.pdf">On the
-                    Coordination of
-                    Vulnerability Fixes - An Empirical Study of Practices from 13 CVE Numbering
-                    Authorities
-                </a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a
-                    href="publications/2024/emse_justina_cna.bib"><i>BibTeX</i></a></li>
             <li>NAYEBI, M. and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2306.15851">Image-based Communication on
                     Social
-                    Coding Platforms</a>, Journal of Software: Evolution and Process (JSEP), Wiley, to appear.&nbsp;<a
-                    href="publications/2024/jsep_maleknaz.bib"><i>BibTeX</i></a></li>
-        </ul>
+                    Coding Platforms</a>, Journal of Software: Evolution and Process (JSEP), 36(5), Wiley.&nbsp;<a
+                                                                                                                  href="publications/2024/jsep_maleknaz.bib"><i>BibTeX</i></a></li>
+            <li>BAJAJ, R., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2024). <a
+                    href="publications/2024/emse_rahul.pdf">Unreproducible builds: Time to fix, causes, and correlation
+                    with
+                    external ecosystem factors
+                </a>, Empirical Software Engineering, 29(11), Springer.&nbsp;<a
+                    href="publications/2024/emse_rahul.bib"><i>BibTeX</i></a></li>
+            </ul>
         <br />
         <h3>Conference</h3>
         <ul>
@@ -168,19 +166,18 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     on Brown Build and Risk Prediction</a>, in Proceedings of the Software Engineering In Practice
                 (SEIP) track at
                 the 46th
-                International Conference on Software Engineering, ICSE (Lisbon, Portugal), to appear. (Acceptance
+                International Conference on Software Engineering, ICSE (Lisbon, Portugal), p. 275-286. (Acceptance
                 ratio: 45/120=37.5%)&nbsp;<a href="publications/2024/seip.bib"><i>BibTeX</i></a>&nbsp;<span
                     style="color: black; font-weight: bold">(Distinguished Paper
                     Award)</span>
             </li>
-            <li>MACEDO, M., TIAN, Y., COGO, F. and ADAMS, B. (2024). <a
-                    href="https://arxiv.org/abs/2403.17214">Exploring the Impact
+            <li>MACEDO, M., TIAN, Y., COGO, F. and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2403.17214">Exploring the Impact
                     of the Output Format on
                     the Evaluation of Large Language Models for Code Translation</a>, in Proceedings of the 2024 Special
                 Event of AI
-                Foundation Models and Software Engineering (FORGE), to appear. (Acceptance ratio: 8/16=50%)&nbsp;<a
-                    href="publications/2024/forge.bib"><i>BibTeX</i></a>&nbsp;<span
-                    style="color: black; font-weight: bold">(Best Paper Award)</span></li>
+                Foundation Models and Software Engineering (FORGE), p. 57-68. (Acceptance ratio: 8/16=50%)&nbsp;<a
+                    href="publications/2024/forge.bib"><i>BibTeX</i></a>&nbsp;<span style="color: black; font-weight: bold">(Best
+                    Paper Award)</span></li>
         </ul>
         <br /><br /><br /><br />
     </div>
@@ -190,12 +187,12 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Journal</h3>
         <ul>
-            <li>BAJAJ, R., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2023). <a
-                    href="publications/2023/emse_rahul.pdf">Unreproducible builds: Time to fix, causes, and correlation
-                    with
-                    external ecosystem factors
-                </a>, Empirical Software Engineering, 29(11), Springer.&nbsp;<a
-                    href="publications/2023/emse_rahul.bib"><i>BibTeX</i></a></li>
+            <li>LIN, J., ADAMS, B. and HASSAN, A.E. (2023). <a href="publications/2023/emse_justina_cna.pdf">On the
+                    Coordination of
+                    Vulnerability Fixes - An Empirical Study of Practices from 13 CVE Numbering
+                    Authorities
+                </a>, Empirical Software Engineering, 28(6), Springer.&nbsp;<a
+                    href="publications/2023/emse_justina_cna.bib"><i>BibTeX</i></a></li>
             <li>FOUNDJEM, A., EGHAN, E.E. and ADAMS, B. (2023). <a href="publications/2023/tse_armstrong.pdf">A Grounded
                     Theory of Cross-community SECOs: Feedback
                     Diversity vs. Synchronization</a>, Transactions on Software Engineering
@@ -234,14 +231,13 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     href="https://ece.uwaterloo.ca/~wshang/pubs/FSE_2023_JINFU.pdf">IoPV: On
                     Inconsistent Option Performance Variations</a>, in Proceedings of the 31st
                 Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering,
-                ESEC/FSE (San Francisco, USA), to appear. (Acceptance ratio: 60/465=12.9%)&nbsp;<a
-                    href="publications/2023/fse.bib"><i>BibTeX</i></a></li>
+                ESEC/FSE (San Francisco, USA), p. 845-857. (Acceptance ratio: 60/465=12.9%)&nbsp;<a href="publications/2023/fse.bib"><i>BibTeX</i></a></li>
             <li>
                 HASAN, K., MACEDO, M., TIAN, Y., ADAMS, B. and DING, S. (2023). <a
                     href="https://arxiv.org/abs/2304.08426">Understanding the Time to First Response In GitHub Pull
                     Requests</a>, in
                 Proceedings of the 20th International Conference on Mining Software
-                Repositories, MSR (Melbourne, Australia), p. 1--11. (Acceptance ratio: 43/115=37.4%)&nbsp;<a
+                Repositories, MSR (Melbourne, Australia), p. 1-11. (Acceptance ratio: 43/115=37.4%)&nbsp;<a
                     href="publications/2023/msr_kazi.bib"><i>BibTeX</i></a>
             </li>
         </ul>
@@ -480,7 +476,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
             <li>GRICHI, M., ABIDI, M., JAAFAR, F., EGHAN, E.E. and ADAMS, B. (2020). <a
                     href="publications/2020/qrs_manel.pdf">On the Impact of Inter-language Dependencies in
                     Multi-language Systems</a>, in Proceedings of the 2020 IEEE International Conference on Software
-                Quality, Reliability and Security, QRS (Macau, China), to appear. (Acceptance ratio:
+                Quality, Reliability and Security, QRS (Macau, China). (Acceptance ratio:
                 36/125=28.8%)&nbsp;<a href="publications/2020/qrs_manel.bib"><i>BibTeX</i></a>&nbsp;<span
                     style="color: black; font-weight: bold">(Recommended to the IEEE Transactions on Reliability)</span>
             </li>
