Some more changes.

--- a/publications.html
+++ b/publications.html
@@ -102,7 +102,12 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     href="publications/2024/ieeesw-ernesto.pdf">The
                     State of Documentation Practices of Third-party Machine Learning Models and Datasets</a>, IEEE
                 Software, 41(5), p.52-59, IEEE.&nbsp;<a href="publications/2024/ieeesw-ernesto.bib"><i>BibTeX</i></a>
-            </li>
+            </li>            
+            <li>KAMATH, D.M., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2024). <a
+                    href="publications/2024/emse_divya_timeout.pdf">On Combining Commit Grouping and Build Skip
+                    Prediction to Reduce
+                    Redundant Continuous Integration Activity</a>, Empirical Software
+              Engineering, 29(6), Springer.&nbsp;<a href="publications/2024/emse_divya_timeout.bib"><i>BibTeX</i></a></li>
             <li>ZHENG, S., ADAMS, B. and HASSAN, A.E. (2024). <a href="https://arxiv.org/abs/2405.00796">Does Using
                     Bazel Help Speed
                     Up Continuous Integration Builds?</a>, Empirical Software
@@ -113,13 +118,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     impact of Concept drift and Data leakage on Log Level Prediction
                     Models</a>, Empirical Software
                 Engineering, 29(5), Springer.&nbsp;<a href="publications/2024/emse_youssef.bib"><i>BibTeX</i></a>
-            </li>
-            <li>KAMATH, D.M., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2024). <a
-                    href="publications/2024/emse_divya_timeout.pdf">On Combining Commit Grouping and Build Skip
-                    Prediction to Reduce
-                    Redundant Continuous Integration Activity</a>, Empirical Software
-                Engineering, 29(6), Springer.&nbsp;<a
-                    href="publications/2024/emse_divya_timeout.bib"><i>BibTeX</i></a></li>            
+            </li>                        
             <li>PATEL, H., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_harsh.pdf">Post Deployment
                     Recycling
                     of Machine Learning Models - Don't Throw Away Your Old Models!</a>, Empirical Software
@@ -136,7 +135,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
             <li>MALIK, A., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_akshat_within.pdf">Towards
                     Graph-Anonymization of Software Analytics Data: Empirical Study on JIT Defect Prediction</a>,
                 Empirical Software Engineering, 29(4), Springer.&nbsp;<a
-                    href="publications/2024/emse_akshat_within.bib"><i>BibTeX</i></a></li>
+                                                                        href="publications/2024/emse_akshat_within.bib"><i>BibTeX</i></a></li>            
             <li>NAYEBI, M. and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2306.15851">Image-based Communication on
                     Social
                     Coding Platforms</a>, Journal of Software: Evolution and Process (JSEP), 36(5), Wiley.&nbsp;<a
@@ -145,7 +144,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     href="publications/2024/emse_rahul.pdf">Unreproducible builds: Time to fix, causes, and correlation
                     with
                     external ecosystem factors
-                </a>, Empirical Software Engineering, 29(11), Springer.&nbsp;<a
+                </a>, Empirical Software Engineering, 29(1), Springer.&nbsp;<a
                     href="publications/2024/emse_rahul.bib"><i>BibTeX</i></a></li>
             </ul>
         <br />
