--- a/publications.html
+++ b/publications.html
@@ -86,6 +86,11 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Journal</h3>
         <ul>
+            <li>KAMATH, D.M., ADAMS, B. and HASSAN, A.E. (2024). <a
+                    href="publications/2024/emse_divya_light.pdf">Lightweight
+                    Dynamic Build Batching Algorithms for Continuous Integration</a>, Empirical Software
+                Engineering, Springer, to appear.&nbsp;<a
+                    href="publications/2024/emse_divya_light.bib"><i>BibTeX</i></a></li>
             <li>
                 PATEL, H., BOUCHER, D., FALLAHZADEH, E., HASSAN, A.E. and ADAMS, B. (2024). <a
                     href="publications/2024/ieeesw-harsh.pdf">A State-of-the-practice Release-readiness
@@ -102,12 +107,13 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     href="publications/2024/ieeesw-ernesto.pdf">The
                     State of Documentation Practices of Third-party Machine Learning Models and Datasets</a>, IEEE
                 Software, 41(5), p.52-59, IEEE.&nbsp;<a href="publications/2024/ieeesw-ernesto.bib"><i>BibTeX</i></a>
-            </li>            
+            </li>
             <li>KAMATH, D.M., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2024). <a
                     href="publications/2024/emse_divya_timeout.pdf">On Combining Commit Grouping and Build Skip
                     Prediction to Reduce
                     Redundant Continuous Integration Activity</a>, Empirical Software
-              Engineering, 29(6), Springer.&nbsp;<a href="publications/2024/emse_divya_timeout.bib"><i>BibTeX</i></a></li>
+                Engineering, 29(6), Springer.&nbsp;<a href="publications/2024/emse_divya_timeout.bib"><i>BibTeX</i></a>
+            </li>
             <li>ZHENG, S., ADAMS, B. and HASSAN, A.E. (2024). <a href="https://arxiv.org/abs/2405.00796">Does Using
                     Bazel Help Speed
                     Up Continuous Integration Builds?</a>, Empirical Software
@@ -118,7 +124,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     impact of Concept drift and Data leakage on Log Level Prediction
                     Models</a>, Empirical Software
                 Engineering, 29(5), Springer.&nbsp;<a href="publications/2024/emse_youssef.bib"><i>BibTeX</i></a>
-            </li>                        
+            </li>
             <li>PATEL, H., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_harsh.pdf">Post Deployment
                     Recycling
                     of Machine Learning Models - Don't Throw Away Your Old Models!</a>, Empirical Software
@@ -128,25 +134,27 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     Large-Scale Exploratory Study on the Proxy Pattern in Ethereum</a>, Empirical Software
                 Engineering, 29(4), Springer.&nbsp;<a href="publications/2024/emse_amir_proxy.bib"><i>BibTeX</i></a>
             </li>
-            <li>ZHAO, Z., CHEN, Y., BANGASH, A.A., ADAMS, B. and HASSAN, A.E. (2024). <a href="https://arxiv.org/abs/2402.15990">An
+            <li>ZHAO, Z., CHEN, Y., BANGASH, A.A., ADAMS, B. and HASSAN, A.E. (2024). <a
+                    href="https://arxiv.org/abs/2402.15990">An
                     Empirical Study of Challenges in Machine Learning Asset
                     Management</a>, Empirical Software
-                Engineering, 29(4), Springer.&nbsp;<a href="publications/2024/emse_jimmy_challenges.bib"><i>BibTeX</i></a></li>
+                Engineering, 29(4), Springer.&nbsp;<a
+                    href="publications/2024/emse_jimmy_challenges.bib"><i>BibTeX</i></a></li>
             <li>MALIK, A., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_akshat_within.pdf">Towards
                     Graph-Anonymization of Software Analytics Data: Empirical Study on JIT Defect Prediction</a>,
                 Empirical Software Engineering, 29(4), Springer.&nbsp;<a
-                                                                        href="publications/2024/emse_akshat_within.bib"><i>BibTeX</i></a></li>            
+                    href="publications/2024/emse_akshat_within.bib"><i>BibTeX</i></a></li>
             <li>NAYEBI, M. and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2306.15851">Image-based Communication on
                     Social
                     Coding Platforms</a>, Journal of Software: Evolution and Process (JSEP), 36(5), Wiley.&nbsp;<a
-                                                                                                                  href="publications/2024/jsep_maleknaz.bib"><i>BibTeX</i></a></li>
+                    href="publications/2024/jsep_maleknaz.bib"><i>BibTeX</i></a></li>
             <li>BAJAJ, R., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2024). <a
                     href="publications/2024/emse_rahul.pdf">Unreproducible builds: Time to fix, causes, and correlation
                     with
                     external ecosystem factors
                 </a>, Empirical Software Engineering, 29(1), Springer.&nbsp;<a
                     href="publications/2024/emse_rahul.bib"><i>BibTeX</i></a></li>
-            </ul>
+        </ul>
         <br />
         <h3>Conference</h3>
         <ul>
@@ -170,12 +178,14 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     style="color: black; font-weight: bold">(Distinguished Paper
                     Award)</span>
             </li>
-            <li>MACEDO, M., TIAN, Y., COGO, F. and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2403.17214">Exploring the Impact
+            <li>MACEDO, M., TIAN, Y., COGO, F. and ADAMS, B. (2024). <a
+                    href="https://arxiv.org/abs/2403.17214">Exploring the Impact
                     of the Output Format on
                     the Evaluation of Large Language Models for Code Translation</a>, in Proceedings of the 2024 Special
                 Event of AI
                 Foundation Models and Software Engineering (FORGE), p. 57-68. (Acceptance ratio: 8/16=50%)&nbsp;<a
-                    href="publications/2024/forge.bib"><i>BibTeX</i></a>&nbsp;<span style="color: black; font-weight: bold">(Best
+                    href="publications/2024/forge.bib"><i>BibTeX</i></a>&nbsp;<span
+                    style="color: black; font-weight: bold">(Best
                     Paper Award)</span></li>
         </ul>
         <br /><br /><br /><br />
@@ -230,7 +240,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     href="https://ece.uwaterloo.ca/~wshang/pubs/FSE_2023_JINFU.pdf">IoPV: On
                     Inconsistent Option Performance Variations</a>, in Proceedings of the 31st
                 Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering,
-                ESEC/FSE (San Francisco, USA), p. 845-857. (Acceptance ratio: 60/465=12.9%)&nbsp;<a href="publications/2023/fse.bib"><i>BibTeX</i></a></li>
+                ESEC/FSE (San Francisco, USA), p. 845-857. (Acceptance ratio: 60/465=12.9%)&nbsp;<a
+                    href="publications/2023/fse.bib"><i>BibTeX</i></a></li>
             <li>
                 HASAN, K., MACEDO, M., TIAN, Y., ADAMS, B. and DING, S. (2023). <a
                     href="https://arxiv.org/abs/2304.08426">Understanding the Time to First Response In GitHub Pull
