--- a/publications.html
+++ b/publications.html
@@ -86,6 +86,13 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Journal</h3>
         <ul>
+            <li>
+                ZHENG, S., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/ieeesw-shenyu.pdf">On Build
+                    Hermeticity in
+                    Bazel-based Build
+                    Systems</a>, IEEE Software, IEEE,
+                to appear.&nbsp;<a href="publications/2024/ieeesw-shenyu.bib"><i>BibTeX</i></a>
+            </li>
             <li>KAMATH, D.M., ADAMS, B. and HASSAN, A.E. (2024). <a
                     href="publications/2024/emse_divya_light.pdf">Lightweight
                     Dynamic Build Batching Algorithms for Continuous Integration</a>, Empirical Software
