Finally found pre-proceedings preprint.

--- a/publications.html
+++ b/publications.html
@@ -486,7 +486,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                 International Conference on Software Maintenance and Evolution, ICSME (Adelaide, Australia), pages
                 546-556. (Acceptance ratio: 58/201=28.9%)&nbsp;<a
                     href="publications/2020/icsme_manel.bib"><i>BibTeX</i></a></li>
-            <li>OPENJA, M., ADAMS, B. and KHOMH, F. (2020). <a name="icsme_moses">Analysis of Modern Release Engineering
+            <li>OPENJA, M., ADAMS, B. and KHOMH, F. (2020). <a href="publications/2020/icsme_moses.pdf">Analysis of Modern
+                    Release Engineering
                     Topics - A Large-Scale Study using StackOverflow</a>, in Proceedings of the 36th IEEE International
                 Conference on Software Maintenance and Evolution, ICSME (Adelaide, Australia), pages 104-114.
                 (Acceptance ratio: 58/201=28.9%)&nbsp;<a href="publications/2020/icsme_moses.bib"><i>BibTeX</i></a></li>
