--- a/publications.html
+++ b/publications.html
@@ -86,6 +86,9 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Journal</h3>
         <ul>
+            <li>FALLAHZADEH, E., RIGBY, P.C. and ADAMS, B. (2024). <a hname="scale">Contrasting Test
+                    Selection, Prioritization, and Batch Testing at Scale</a>, Empirical Software
+                Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_scale.bib"><i>BibTeX</i></a></li>
             <li>
                 ZHENG, S., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/ieeesw-shenyu.pdf">On Build
                     Hermeticity in
@@ -486,7 +489,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                 International Conference on Software Maintenance and Evolution, ICSME (Adelaide, Australia), pages
                 546-556. (Acceptance ratio: 58/201=28.9%)&nbsp;<a
                     href="publications/2020/icsme_manel.bib"><i>BibTeX</i></a></li>
-            <li>OPENJA, M., ADAMS, B. and KHOMH, F. (2020). <a href="publications/2020/icsme_moses.pdf">Analysis of Modern
+            <li>OPENJA, M., ADAMS, B. and KHOMH, F. (2020). <a href="publications/2020/icsme_moses.pdf">Analysis of
+                    Modern
                     Release Engineering
                     Topics - A Large-Scale Study using StackOverflow</a>, in Proceedings of the 36th IEEE International
                 Conference on Software Maintenance and Evolution, ICSME (Adelaide, Australia), pages 104-114.
