Adding Emad's paper.

--- a/publications.html
+++ b/publications.html
@@ -86,7 +86,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Journal</h3>
         <ul>
-            <li>FALLAHZADEH, E., RIGBY, P.C. and ADAMS, B. (2024). <a hname="scale">Contrasting Test
+            <li>FALLAHZADEH, E., RIGBY, P.C. and ADAMS, B. (2024). <a
+                    href="publications/2024/emse_scale.pdf">Contrasting Test
                     Selection, Prioritization, and Batch Testing at Scale</a>, Empirical Software
                 Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_scale.bib"><i>BibTeX</i></a></li>
             <li>
