Adding SANER paper.

--- a/publications.html
+++ b/publications.html
@@ -8,6 +8,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <div class="subnav">
             <h5>Navigation</h5>
             <ul>
+                <li><a href="#2025">2025</a></li>
                 <li><a href="#2024">2024</a></li>
                 <li><a href="#2023">2023</a></li>
                 <li><a href="#2022">2022</a></li>
@@ -81,6 +82,26 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
 
     </div>
 
+    <div class="content">
+        <h2><a name="2025"></a>2024</h2>
+        <br />
+        <h3>Journal</h3>
+        <ul>
+        </ul>
+        <br />
+        <h3>Conference</h3>
+        <ul>
+            <li>
+                OPDEBEECK, R., ADAMS, B. and DE ROOVER, C. (2025). <a
+                    href="https://researchportal.vub.be/nl/publications/analysing-software-supply-chains-of-infrastructure-as-code-extrac">Analysing
+                    Software Supply Chains of Infrastructure as Code: Extraction of Ansible Plugin Dependencies</a>, in Proceedings
+                of the IEEE International Conference on Software Analysis, Evolution and Reengineering, SANER (Montreal, Quebec), to appear. (Acceptance
+                ratio: 52/225=23.21%)&nbsp;<a href="publications/2025/saner.bib"><i>BibTeX</i></a>
+            </li>
+            </ul>
+            <br /><br /><br /><br />
+    </div>
+    
     <div class="content">
         <h2><a name="2024"></a>2024</h2>
         <br />
