--- a/publications.html
+++ b/publications.html
@@ -95,7 +95,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                 OPDEBEECK, R., ADAMS, B. and DE ROOVER, C. (2025). <a
                     href="https://researchportal.vub.be/nl/publications/analysing-software-supply-chains-of-infrastructure-as-code-extrac">Analysing
                     Software Supply Chains of Infrastructure as Code: Extraction of Ansible Plugin Dependencies</a>, in Proceedings
-                of the IEEE International Conference on Software Analysis, Evolution and Reengineering, SANER (Montreal, Quebec), to appear. (Acceptance
+                of the 32nd IEEE International Conference on Software Analysis, Evolution and Reengineering, SANER (Montr&eacute;al,
+                Canada), to appear. (Acceptance
                 ratio: 52/225=23.21%)&nbsp;<a href="publications/2025/saner.bib"><i>BibTeX</i></a>
             </li>
             </ul>
@@ -580,7 +581,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     href="https://plg.uwaterloo.ca/~migod/papers/2019/mobileSoft2019.pdf">A Comparison of Bugs across
                     the iOS and Android Platforms of Two Open Source Cross Platform Browser Apps</a>, in Proceedings of
                 the 2019 IEEE/ACM International Conference on Mobile Software Engineering and Systems, MOBILESoft
-                (Montreal, Canada), pages 76-86. (Acceptance ratio: X/Y=Z%)&nbsp;<a name="mobile19"
+                (Montr&eacute;al, Canada), pages 76-86. (Acceptance ratio: X/Y=Z%)&nbsp;<a name="mobile19"
                     href="publications/2019/mobile.bib"><i>BibTeX</i></a>
             </li>
         </ul>
@@ -589,10 +590,10 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <h3>Workshop</h3>
         <ul>
             <li>
-                FERREIRA, I., STEWART, K., GERMAN, D. and ADAMS, B. (2019). <a
-                    href="publications/2019/SEMotion_2019.pdf">A Longitudinal Study on the Maintainers’ Sentiment of a
+                FERREIRA, I., STEWART, K., GERMAN, D. and ADAMS, B. (2019). <a href="publications/2019/SEMotion_2019.pdf">A
+                    Longitudinal Study on the Maintainers’ Sentiment of a
                     Large Scale Open Source Ecosystem</a>, in Proceedings of the 4th International Workshop on Emotional
-                Awareness in Software Engineering, SEmotion (Montreal, Canada), p, 17-22.&nbsp;<a
+                Awareness in Software Engineering, SEmotion (Montr&eacute;al, Canada), p, 17-22.&nbsp;<a
                     href="publications/2019/semotion.bib"><i>BibTeX</i></a>
             </li>
         </ul>
@@ -1045,8 +1046,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
             <li>
                 ADAMS, B. (2015). <a href="http://www.slideshare.net/bramadams/the-bash-dashboard-or">The Bash Dashboard
                     (Or: How to Use Bash for Data Analysis)</a>, tutorial at the <a
-                    href="http://polymorse.polymtl.ca/plow-2015a/">4th PLOW workshop</a>, February 28, 2015 (Montreal,
-                QC).
+                    href="http://polymorse.polymtl.ca/plow-2015a/">4th PLOW workshop</a>, February 28, 2015 (Montr&eacute;al,
+                Canada).
             </li>
         </ul>
         <br /><br /><br /><br />
@@ -1370,7 +1371,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     href="http://sail.cs.queensu.ca/data/pdfs/ICST2012_ALargeScaleEmpiricalStudyOnUser-CentricPerformanceAnalysis.pdf">A
                     Large Scale Empirical Study on User-Centric Performance Analysis</a>, in Proceedings of the industry
                 track of the 5th International Conference on Software Testing, Verification and Validation, ICST
-                (Montr&eacute;al, Canada)), pages 410-419.&nbsp;<a name="icst12shahed"
+                (Montr&eacute;al, Canada), pages 410-419.&nbsp;<a name="icst12shahed"
                     href="publications/2012/icst12shahed.bib"><i>BibTeX</i></a>
             </li>
         </ul>
