Adding Amir's paper.

--- a/publications.html
+++ b/publications.html
@@ -87,6 +87,10 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Journal</h3>
         <ul>
+        <li>EBRAHIMI, A., ADAMS, B., OLIVA, G.A. and HASSAN, A.E. (2024). <a href="https://arxiv.org/abs/2501.00674">UPC
+                Sentinel: An Accurate Approach for Detecting Upgradeability Proxy Contracts in Ethereum</a>, Empirical Software
+            Engineering, Springer, to appear.&nbsp;<a href="publications/2025/emse_amir_sentinel.bib"><i>BibTeX</i></a>
+        </li>
         </ul>
         <br />
         <h3>Conference</h3>
