Adding Marcos' paper.

--- a/publications.html
+++ b/publications.html
@@ -102,6 +102,11 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
     <h3>Conference</h3>
     <ul>
       <li>
+        MACEDO, M., TIAN, Y., NIE, P., C&#212;GO, F.R. and ADAMS, B. (2025). <a href="https://arxiv.org/abs/2411.01063">InterTrans: Leveraging Transitive Intermediate Translations to Enhance LLM-based Code Translation</a>, in Proceedings of the 47th International Conference
+        on Software Engineering, ICSE (Ottawa, ON), to appear. (Acceptance ratio:
+        N/A)&nbsp;<a href="publications/2025/icse25.bib"><i>BibTeX</i></a>
+      </li>
+      <li>
         OPDEBEECK, R., ADAMS, B. and DE ROOVER, C. (2025). <a
           href="https://researchportal.vub.be/nl/publications/analysing-software-supply-chains-of-infrastructure-as-code-extrac">Analysing
           Software Supply Chains of Infrastructure as Code: Extraction of Ansible Plugin Dependencies</a>, in
