--- a/publications.html
+++ b/publications.html
@@ -92,11 +92,28 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
           Exploratory Study of Foundation Model Leaderboards</a>, Transactions on Software Engineering
         (TSE), IEEE, to appear.&nbsp;<a href="publications/2025/tse_jimmy.bib"><i>BibTeX</i></a>
       </li>
-      <li>EBRAHIMI, A., ADAMS, B., OLIVA, G.A. and HASSAN, A.E. (2024). <a href="https://arxiv.org/abs/2501.00674">UPC
+      <li>EBRAHIMI, A., ADAMS, B., OLIVA, G.A. and HASSAN, A.E. (2025). <a href="https://arxiv.org/abs/2501.00674">UPC
           Sentinel: An Accurate Approach for Detecting Upgradeability Proxy Contracts in Ethereum</a>, Empirical
         Software
         Engineering, Springer, to appear.&nbsp;<a href="publications/2025/emse_amir_sentinel.bib"><i>BibTeX</i></a>
       </li>
+      <li>FALLAHZADEH, E., RIGBY, P.C. and ADAMS, B. (2025). <a href="publications/2025/emse_scale.pdf">Contrasting Test
+          Selection, Prioritization, and Batch Testing at Scale</a>, Empirical Software
+        Engineering, Springer, to appear.&nbsp;<a href="publications/2025/emse_scale.bib"><i>BibTeX</i></a></li>
+      <li>KAMATH, D.M., ADAMS, B. and HASSAN, A.E. (2025). <a href="publications/2025/emse_divya_light.pdf">Lightweight
+          Dynamic Build Batching Algorithms for Continuous Integration</a>, Empirical Software
+        Engineering, Springer, to appear.&nbsp;<a href="publications/2025/emse_divya_light.bib"><i>BibTeX</i></a></li>
+      <li>
+        PATEL, H., BOUCHER, D., FALLAHZADEH, E., HASSAN, A.E. and ADAMS, B. (2025). <a
+          href="publications/2025/ieeesw-harsh.pdf">A State-of-the-practice Release-readiness
+          Checklist for Generative AI-based Software Products</a>, IEEE Software, IEEE,
+        to appear.&nbsp;<a href="publications/2025/ieeesw-harsh.bib"><i>BibTeX</i></a>
+      </li>
+      <li>
+        YASMIN, J., WANG, J., TIAN, Y., and ADAMS, B. (2025). <a href="https://arxiv.org/abs/2406.00180">An
+          Empirical Study of Developers' Challenges in Implementing Workflows as Code: A Case Study on Apache
+          Airflow</a>, Journal of Software and Systems (JSS), Elsevier, to appear.&nbsp;<a
+          href="publications/2025/jss_airflow.bib"><i>BibTeX</i></a></li>
     </ul>
     <br />
     <h3>Conference</h3>
@@ -125,25 +142,13 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
     <br />
     <h3>Journal</h3>
     <ul>
-      <li>FALLAHZADEH, E., RIGBY, P.C. and ADAMS, B. (2024). <a href="publications/2024/emse_scale.pdf">Contrasting Test
-          Selection, Prioritization, and Batch Testing at Scale</a>, Empirical Software
-        Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_scale.bib"><i>BibTeX</i></a></li>
       <li>
         ZHENG, S., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/ieeesw-shenyu.pdf">On Build
           Hermeticity in
           Bazel-based Build
           Systems</a>, IEEE Software, IEEE,
         to appear.&nbsp;<a href="publications/2024/ieeesw-shenyu.bib"><i>BibTeX</i></a>
-      </li>
-      <li>KAMATH, D.M., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_divya_light.pdf">Lightweight
-          Dynamic Build Batching Algorithms for Continuous Integration</a>, Empirical Software
-        Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_divya_light.bib"><i>BibTeX</i></a></li>
-      <li>
-        PATEL, H., BOUCHER, D., FALLAHZADEH, E., HASSAN, A.E. and ADAMS, B. (2024). <a
-          href="publications/2024/ieeesw-harsh.pdf">A State-of-the-practice Release-readiness
-          Checklist for Generative AI-based Software Products</a>, IEEE Software, IEEE,
-        to appear.&nbsp;<a href="publications/2024/ieeesw-harsh.bib"><i>BibTeX</i></a>
-      </li>
+      </li>          
       <li>
         YASMIN, J., WANG, J., TIAN, Y., and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2406.00180">An
           Empirical Study of Developers' Challenges in Implementing Workflows as Code: A Case Study on Apache
