Adding Adekunle's EMSE paper.

--- a/publications.html
+++ b/publications.html
@@ -87,6 +87,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
     <br />
     <h3>Journal</h3>
     <ul>
+      <li>AJIBODE, A., BANGASH, A.A., C&#212;GO, F.R., ADAMS, B. and HASSAN, A.E. (2025). <a href="publications/2025/emse_semver.pdf">Towards Semantic Versioning of Open Pre-trained Language Model Releases on Hugging Face</a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a href="publications/2025/emse_semver.bib"><i>BibTeX</i></a>
+      </li>
       <li>ZHAO, Z., BANGASH, A.A., C&#212;GO, F.R., ADAMS, B. and HASSAN, A.E. (2025). <a
           href="https://arxiv.org/abs/2407.04065">On the Workflows and Smells of Leaderboard Operations (LBOps): An
           Exploratory Study of Foundation Model Leaderboards</a>, Transactions on Software Engineering
@@ -229,7 +231,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
           style="color: black; font-weight: bold">(Distinguished Paper
           Award)</span>
       </li>
-      <li>MACEDO, M., TIAN, Y., COGO, F. and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2403.17214">Exploring the
+      <li>MACEDO, M., TIAN, Y., C&#212;GO, F.R. and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2403.17214">Exploring the
           Impact
           of the Output Format on
           the Evaluation of Large Language Models for Code Translation</a>, in Proceedings of the 2024 Special
