Black-box deployment paper.

--- a/publications.html
+++ b/publications.html
@@ -94,7 +94,12 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
           Exploratory Study of Foundation Model Leaderboards</a>, Transactions on Software Engineering
         (TSE), IEEE, to appear.&nbsp;<a href="publications/2025/tse_jimmy.bib"><i>BibTeX</i></a>
       </li>
-      <li>EBRAHIMI, A., ADAMS, B., OLIVA, G.A. and HASSAN, A.E. (2025). <a href="https://arxiv.org/abs/2501.00674">UPC
+    <li>SINGH, J., FALLAHZADEH, E., ADAMS, B. and HASSAN, A.E. (2025). <a href="publications/2025/emse_blackbox.pdf">On the
+            Impact of Black-box Deployment Strategies for Edge AI on
+            Latency and Model Performance - Empirical Study on ONNX</a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a
+            href="publications/2025/emse_blackbox.bib"><i>BibTeX</i></a>
+    </li>
+    <li>EBRAHIMI, A., ADAMS, B., OLIVA, G.A. and HASSAN, A.E. (2025). <a href="https://arxiv.org/abs/2501.00674">UPC
           Sentinel: An Accurate Approach for Detecting Upgradeability Proxy Contracts in Ethereum</a>, Empirical
         Software
         Engineering, Springer, to appear.&nbsp;<a href="publications/2025/emse_amir_sentinel.bib"><i>BibTeX</i></a>
